# serpapi-starter-python

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_search.py
serpapi-starter-python/: README.md  pyproject.toml
serpapi-starter-python/src/serpapi_starter/: search.py
serpapi-starter-python/tests/: test_search.py
src/serpapi_starter/: __init__.py  search.py
src/serpapi_starter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
